--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <div class="dropdown">
           <span class="dropdown-btn">Previous Events</span>
           <div class="dropdown-content">
-            <a href="#">SISSY'24</a>
-            <a href="#">SISSY'23</a>
-            <a href="#">SISSY'22</a>
-            <a href="#">SISSY'21</a>
-            <a href="#">SISSY'20</a>
+            <a href="https://sissy.telecom-paristech.fr/">SISSY'24</a>
+            <a href="https://sissy.telecom-paristech.fr/2023/">SISSY'23</a>
+            <a href="https://sissy.telecom-paristech.fr/2022/">SISSY'22</a>
+            <a href="https://sissy.telecom-paristech.fr/2021/">SISSY'21</a>
+            <a href="https://sissy.telecom-paristech.fr/2020/">SISSY'20</a>
+            <a href="https://sissy.telecom-paristech.fr/2019/">SISSY'19</a>
           </div>
         </div>
         <a href="#contact">Contact</a>
