--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
       Submissions should be formatted according to the IEEE Computer Society Press proceedings style guide and submitted electronically in PDF format.
       </p>
       <p>
+      <strong>The submission system will be open soon. Please check back for updates.</strong>
+      </p>
+<!--         
       Please submit your papers through the ACSOS conference management system via EasyChair:
       <a href="https://easychair.org/my/conference?conf=acsos2025" target="_blank">https://easychair.org/my/conference?conf=acsos2025</a>
       When prompted to "Select a Track" choose "SISSY -- Workshop on Self-Improving System Integration"
-      </p>
+      </p> -->
       <p>
       At least one of the authors must register for the conference and workshop (before the CR deadline).</p>
   </section>
