--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <h1>12th International Workshop on Self-Improving System Integration (SISSY'25)</h1>
     <p>29 September – 3 October, 2025 | Tokyo, Japan</p>
     <a href="#paper" class="btn">Submit Paper Now</a>
+
+    <!-- image attribution -->
+    <p class="attribution" style="font-size: small; position: absolute; bottom: 10px; right: 10px; padding: 5px; text-decoration: none; color: white;">Image by <a href="https://commons.wikimedia.org/wiki/User:Morio" target="_blank" style="text-decoration: none; color: white;">Morio</a> on <a href="https://commons.wikimedia.org/wiki/File:Skyscrapers_of_Shinjuku_2009_January.jpg" target="_blank" style="text-decoration: none; color: white;">Wikimedia Commons</a></p>
   </div>
 
   <!-- <section id="about">
