fixed sticky nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+  
+
+  <div class="hero" id="hero">
+    <h1>12th International Workshop on Self-Improving System Integration (SISSY'25)</h1>
+    <p>29 September – 3 October, 2025 | Tokyo, Japan</p>
+    <a href="#paper" class="btn">Submit Paper Now</a>
+
+    <!-- image attribution -->
+    <p class="attribution" style="font-size: small; position: absolute; bottom: -10px; right: 10px; padding: 5px; text-decoration: none; color: white;">Image by <a href="https://commons.wikimedia.org/wiki/User:Morio" target="_blank" style="text-decoration: none; color: white;">Morio</a> on <a href="https://commons.wikimedia.org/wiki/File:Skyscrapers_of_Shinjuku_2009_January.jpg" target="_blank" style="text-decoration: none; color: white;">Wikimedia Commons</a></p>
+  </div>
+
+  <header class="sticky-nav">
     <div style="display:flex;justify-content:space-between;align-items:center;">
       <div class="ac"><a href="#hero"><strong>SISSY'25</strong></a></div>
       <nav>
@@ -32,15 +43,6 @@
       </nav>
     </div>
   </header>
-
-  <div class="hero" id="hero">
-    <h1>12th International Workshop on Self-Improving System Integration (SISSY'25)</h1>
-    <p>29 September – 3 October, 2025 | Tokyo, Japan</p>
-    <a href="#paper" class="btn">Submit Paper Now</a>
-
-    <!-- image attribution -->
-    <p class="attribution" style="font-size: small; position: absolute; bottom: -10px; right: 10px; padding: 5px; text-decoration: none; color: white;">Image by <a href="https://commons.wikimedia.org/wiki/User:Morio" target="_blank" style="text-decoration: none; color: white;">Morio</a> on <a href="https://commons.wikimedia.org/wiki/File:Skyscrapers_of_Shinjuku_2009_January.jpg" target="_blank" style="text-decoration: none; color: white;">Wikimedia Commons</a></p>
-  </div>
 
   <!-- <section id="about">
     <h2>About</h2>
@@ -97,10 +99,28 @@
   <section id="contact">
     <h2>Organizers</h2>
     <ul class="organizers">
-      <li>Kirstie Bellman - Topcy House, USA</li>
-      <li>Ada Diaconescu - Telecom Paris, France</li>
-      <li>Lukas Esterle - Aarhus University, Denmark</li>
-      <li>Sven Tomforde - Christian-Albrechts-Universität zu Kiel, Germany</li>
+      <li>Kirstie Bellman 
+        <br>
+        <em>Topcy House, USA</em> 
+        <br>
+        <em>(bellmanhome (at) yahoo.com)</em>
+      </li>
+
+      <li>Ada Diaconescu 
+        <br>
+        <em>Telecom Paris, France</em> 
+        <br>
+        <em>ada.diaconescu (at) telecom-paris.fr)</em>
+      </li>
+      <li><em>Lukas Esterle</em>
+        <br>
+        <em>Aarhus University, Denmark</em> 
+        <br>
+        <em>(lukas.esterle (at) eng.au.dk)</em></li>
+      <li>Sven Tomforde 
+        <br>
+        <em>Christian-Albrechts-Universität zu Kiel, Germany</em> 
+        <br><em>(st (at) informatik.uni-kiel.de)</em></li>
     </ul>
     <p>For inquiries, please contact the organizers directly.</p>
   </section>
