--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- <a href="#paper">Paper Submission</a> -->
          <a href="#tpc">Program Committee</a>
         <div class="dropdown">
-          <span class="dropdown-btn">Previous Events</span>
+          <span class="dropdown-btn">Past Editions</span>
           <div class="dropdown-content">
             <a href="https://sissy.telecom-paristech.fr/">SISSY'24</a>
             <a href="https://sissy.telecom-paristech.fr/2023/">SISSY'23</a>
