updated file with deadlines

--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
       Submissions should be formatted according to the IEEE Computer Society Press proceedings style guide and submitted electronically in PDF format.
       </p>
       <p>
-      <strong>The submission system will be open soon. Please check back for updates.</strong>
+        Please submit through <a href="https://easychair.org/conferences/?conf=acsos2025">https://easychair.org/conferences/?conf=acsos2025</a>
+        <br>
+        Click on the "New Submission" on the upper left and select the track "ACSOS2025 - SISSY-Workshop".
+      </p>
+        <p>
+        <div class="boxCfp">
+          <strong>Important Dates:</strong>
+          <ul>
+            <li>Paper submission deadline: 30 June 2025</li>
+            <li>Notification of acceptance: 15 July 2025</li>
+            <li>Camera-ready submission: 31 July 2025</li>
+          </ul>
+        </div>
       </p>
 <!--         
       Please submit your papers through the ACSOS conference management system via EasyChair:
