added announcement box

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
     <p>The full program will be announced soon. The workshop will include keynote talks, technical paper sessions, and panel discussions.</p>
   </section> -->
 
+  <p>
+    <div class="announcement">
+      <strong>Deadline extension!</strong>
+      <ul>
+        <li>Paper submission: <s>30 June 2025</s> <strong>11 July 2025</strong></li>
+        <li>Notification: <s>15 July 2025</s> <strong>25 July 2025</strong></li>
+      </ul>
+    </div>
+  </p>
+
   <section id="cfp">
     <h2>Call for Papers</h2>
     <p>Information and communication technology (ICT) pervades every aspect of our daily lives. This inclusion changes our communities and all of our human interactions. It also presents a significant set of challenges in correctly designing and integrating our resulting technical systems. For instance, the embedding of ICT functionality in more and more devices (such as household appliances or thermostats) leads to novel interconnections and a changing structure of the overall system. Not only are technical systems increasingly coupled, but also numerous previously isolated natural and human systems have merged into a kind of overall system-of-systems ‐ an interwoven system structure.</p>
@@ -88,12 +98,13 @@
         <br>
         Click on the "New Submission" on the upper left and select the track "ACSOS2025 - SISSY-Workshop".
       </p>
+       </p>
         <p>
         <div class="boxCfp">
           <strong>Important Dates:</strong>
           <ul>
-            <li>Paper submission deadline: 30 June 2025</li>
-            <li>Notification of acceptance: 15 July 2025</li>
+            <li>Paper submission deadline: <s>30 June 2025</s> <strong>11 July 2025</strong></li>
+            <li>Notification of acceptance: <s>15 July 2025</s> <strong>25 July 2025</strong></li>
             <li>Camera-ready submission: 31 July 2025</li>
           </ul>
         </div>
