--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
       <li>Gregor Schiele, University of Duisburg-Essen, Germany</li>
       <li>Anthony Stein, Universität Augsburg, Germany</li>
       <li>Christopher Steward, Ohio State University, USA</li>
+      <li>Elia Henrichs, University of Hohenheim, Germany</li>
       <li>Sven Tomforde, Christian-Albrechts-Universität zu Kiel, Germany (chair)</li>
         
     </ul>
