Updated PC list

--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
 
   <section id="tpc">
     <h2>Program Committee</h2>
-    Tentative program committee members include (from the 2024 edition):
     <ul class="organizers">
+      <li>Ghassan Al-Falouji, Christian-Albrechts-Universität zu Kiel, Germany</li>
       <li>Chloe Barnes, Aston University, UK</li>
+      <li>Christian Becker, Universität Stuttgart, Germany</li>
       <li>Kirstie Bellman, Topcy House, USA (chair)</li>
       <li>Jean Botev, University of Luxembourg, Luxembourg</li>
       <li>Uwe Brinkschulte, University of Frankfurt, Germany</li>
