--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="hero" id="hero">
     <h1>12th International Workshop on Self-Improving System Integration (SISSY'25)</h1>
-    <p>29 September – 3 October, 2025 | Tokyo, Japan</p>
+    <p>Monday, 29 September | Tokyo, Japan</p>
     <a href="#paper" class="btn">Submit Paper Now</a>
 
     <!-- image attribution -->
@@ -47,20 +47,27 @@
   <!-- <section id="about">
     <h2>About</h2>
     <p>SISSY'25 focuses on the theme of <strong>self-improving systems integration</strong>. It brings together researchers and practitioners working on systems that can adapt, learn, and evolve over time to meet complex integration challenges. This 12th edition of the workshop continues a tradition of exploring cutting-edge approaches in system autonomy, interoperability, and adaptive behavior.</p>
-  </section> -->
+  </section> -->´
 
   <!-- <section id="program">
     <h2>Program</h2>
     <p>The full program will be announced soon. The workshop will include keynote talks, technical paper sessions, and panel discussions.</p>
   </section> -->
 
-  <p>
+  <!-- <p>
     <div class="announcement">
       <strong>Deadline extension!</strong>
       <ul>
         <li>Paper submission: <s>30 June 2025</s> <strong>11 July 2025</strong></li>
         <li>Notification: <s>15 July 2025</s> <strong>25 July 2025</strong></li>
       </ul>
+    </div>
+  </p> -->
+
+   <p>
+    <div class="announcement">
+      <strong>Workshop Date Announcement</strong>
+      <p>We are pleased to announce that the workshop will take place on <strong>Monday, 29 September 2025</strong> in <strong>Tokyo, Japan</strong>.</p>
     </div>
   </p>
 
