--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <p>
     <div class="announcement">
       <strong>Workshop Date Announcement</strong>
-      <p>We are pleased to announce that the workshop will take place on <strong>Monday, 29 September 2025</strong> in <strong>Tokyo, Japan</strong>.</p>
+      <p>We are pleased to announce that the workshop will be <strong>full day</strong> and take place on <strong>Monday, 29 September 2025</strong> in <strong>Tokyo, Japan</strong>.</p>
     </div>
   </p>
 
