--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="ac"><a href="#hero"><strong>SISSY'25</strong></a></div>
       <nav>
         <!-- <a href="#about">About</a> -->
-        <!-- <a href="#program">Program</a> -->
+        <a href="#program">Program</a>
         <a href="#cfp">Call for Papers</a>
         <!-- <a href="#paper">Paper Submission</a> -->
          <a href="#tpc">Program Committee</a>
@@ -49,10 +49,107 @@
     <p>SISSY'25 focuses on the theme of <strong>self-improving systems integration</strong>. It brings together researchers and practitioners working on systems that can adapt, learn, and evolve over time to meet complex integration challenges. This 12th edition of the workshop continues a tradition of exploring cutting-edge approaches in system autonomy, interoperability, and adaptive behavior.</p>
   </section> -->´
 
-  <!-- <section id="program">
+     <p>
+    <div class="announcement">
+      <strong>Workshop Date Announcement</strong>
+      <p>We are pleased to announce that the workshop will be <strong>full day</strong> and take place on <strong>Monday, 29 September 2025</strong> in <strong>Tokyo, Japan</strong>.</p>
+    </div>
+  </p>
+
+  <section id="program">
     <h2>Program</h2>
-    <p>The full program will be announced soon. The workshop will include keynote talks, technical paper sessions, and panel discussions.</p>
-  </section> -->
+    <!-- <p>The full program will be announced soon. The workshop will include keynote talks, technical paper sessions, and panel discussions.</p>
+     -->
+    <table class="program-table" style="border-collapse: collapse; width: 100%;">
+      <tr>
+        <td style="border: 1px solid #ccc;">09:30</td>
+        <td style="border: 1px solid #ccc;">
+          <strong>Introduction</strong><br>
+          Bellman, Diaconescu, Esterle, Tomforde
+        </td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">09:45</td>
+        <td style="border: 1px solid #ccc;">
+          <strong>Agents and Modelling</strong><br>
+          <ul>
+            <li>Self-evaluation can help agents meet social expectations <em>– Experience</em></li>
+            <li>Science beyond quantification - integrating objective and subjective views in unpredictable worlds <em>– Research</em></li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">10:15</td>
+        <td style="border: 1px solid #ccc;"><strong>Panel</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">10:45</td>
+        <td style="border: 1px solid #ccc;"><strong>COFFEE BREAK</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">11:00</td>
+        <td style="border: 1px solid #ccc;">
+          <strong>Technical Applications</strong><br>
+          <ul>
+            <li>A Hybrid Architecture for an Autonomous Maritime Water-Taxi Fleet <em>– Vision</em></li>
+            <li>CoMPass: A Roadmap to Collaborative perception and Autonomy in Maritime Systems <em>– Vision</em></li>
+            <li>Towards Self-Adaptive Monitoring of Storage Environments with Distributed Sensor Systems <em>– Research</em></li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">11:45</td>
+        <td style="border: 1px solid #ccc;"><strong>Panel</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">12:30</td>
+        <td style="border: 1px solid #ccc;"><strong>LUNCH BREAK</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">13:30</td>
+        <td style="border: 1px solid #ccc;">
+          <strong>Theoretical Foundations and Explanations</strong><br>
+          <ul>
+            <li>Multi-Perspective Explanations for Multi-Agent Systems <em>– Research</em></li>
+            <li>Think Before You Act: Popperian Expectations for Adaptive Agents <em>– Research</em></li>
+            <li>Complexity Magnifiers Simplify Environment Models <em>– Research</em></li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">14:15</td>
+        <td style="border: 1px solid #ccc;"><strong>Panel</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">15:15</td>
+        <td style="border: 1px solid #ccc;"><strong>COFFEE BREAK</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">15:30</td>
+        <td style="border: 1px solid #ccc;">
+          <strong>Bio-inspired Directions</strong><br>
+          <ul>
+            <li>Revisiting Artificial Brains <em>– Vision</em></li>
+            <li>Adding biological-style design approaches to engineered systems <em></em>– Vision</em></li>
+            <li>Intelligent Value-Co-Creation for Cross-Domain and Cross-Perspective Data Fusion in Socio-Technical Systems: Challenges and Future Research Avenues <em>– Vision</em></li>
+            <li>The Underpinnings for Cooperation: Going from Integrated to Cooperating <em>– Vision</em></li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">16:30</td>
+        <td style="border: 1px solid #ccc;"><strong>Panel</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">17:30</td>
+        <td style="border: 1px solid #ccc;"><strong>Summary - Lessons from SISSY 2025</strong></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid #ccc;">17:45</td>
+        <td style="border: 1px solid #ccc;"><strong>Closing</strong></td>
+      </tr>
+    </table>
+  </section>
 
   <!-- <p>
     <div class="announcement">
@@ -64,12 +161,7 @@
     </div>
   </p> -->
 
-   <p>
-    <div class="announcement">
-      <strong>Workshop Date Announcement</strong>
-      <p>We are pleased to announce that the workshop will be <strong>full day</strong> and take place on <strong>Monday, 29 September 2025</strong> in <strong>Tokyo, Japan</strong>.</p>
-    </div>
-  </p>
+
 
   <section id="cfp">
     <h2>Call for Papers</h2>
