--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <td style="border: 1px solid #ccc;">
           <strong>Agents and Modelling</strong><br>
           <ul>
-            <li>Self-evaluation can help agents meet social expectations <em>– Experience</em></li>
-            <li>Science beyond quantification - integrating objective and subjective views in unpredictable worlds <em>– Research</em></li>
+            <li>Self-evaluation can help agents meet social expectations - <em>Parisa Salmani, Peter Lewis (Experience)</em></li>
+            <li>Science beyond quantification - integrating objective and subjective views in unpredictable worlds - <em>Ada Diaconescu, Marc Delepouve, Emmanuel Ferrand (Research)</em></li>
           </ul>
         </td>
       </tr>
@@ -91,9 +91,9 @@
         <td style="border: 1px solid #ccc;">
           <strong>Technical Applications</strong><br>
           <ul>
-            <li>A Hybrid Architecture for an Autonomous Maritime Water-Taxi Fleet <em>– Vision</em></li>
-            <li>CoMPass: A Roadmap to Collaborative perception and Autonomy in Maritime Systems <em>– Vision</em></li>
-            <li>Towards Self-Adaptive Monitoring of Storage Environments with Distributed Sensor Systems <em>– Research</em></li>
+            <li>A Hybrid Architecture for an Autonomous Maritime Water-Taxi Fleet - <em>Jonas Lange, Pia Schweizer, Ghassan Al-Falouji, Christian Krupitzer, Sven Tomforde (Vision)</em></li>
+            <li>CoMPass: A Roadmap to Collaborative perception and Autonomy in Maritime Systems - <em>Ghassan Al-Falouji, Martina Baiardi, Danilo Pianini, Sven Tomforde (Vision)</em></li>
+            <li>Towards Self-Adaptive Monitoring of Storage Environments with Distributed Sensor Systems - <em>Elia Henrichs, Florian Stoll, Christian Krupitzer (Research)</em></li>
           </ul>
         </td>
       </tr>
@@ -110,9 +110,9 @@
         <td style="border: 1px solid #ccc;">
           <strong>Theoretical Foundations and Explanations</strong><br>
           <ul>
-            <li>Multi-Perspective Explanations for Multi-Agent Systems <em>– Research</em></li>
-            <li>Think Before You Act: Popperian Expectations for Adaptive Agents <em>– Research</em></li>
-            <li>Complexity Magnifiers Simplify Environment Models <em>– Research</em></li>
+            <li>Multi-Perspective Explanations for Multi-Agent Systems - <em>Nathan Lloyd, Peter Lewis (Research)</em></li>
+            <li>Think Before You Act: Popperian Expectations for Adaptive Agents - <em>John Mills, Peter Lewis (Research)</em></li>
+            <li>Complexity Magnifiers Simplify Environment Models - <em>Christopher Landauer (Research)</em></li>
           </ul>
         </td>
       </tr>
@@ -129,10 +129,10 @@
         <td style="border: 1px solid #ccc;">
           <strong>Bio-inspired Directions</strong><br>
           <ul>
-            <li>Revisiting Artificial Brains <em>– Vision</em></li>
-            <li>Adding biological-style design approaches to engineered systems <em></em>– Vision</em></li>
-            <li>Intelligent Value-Co-Creation for Cross-Domain and Cross-Perspective Data Fusion in Socio-Technical Systems: Challenges and Future Research Avenues <em>– Vision</em></li>
-            <li>The Underpinnings for Cooperation: Going from Integrated to Cooperating <em>– Vision</em></li>
+            <li>Revisiting Artificial Brains - <em>David King (Vision)</em></li>
+            <li>Adding biological-style design approaches to engineered systems - <em>Phyllis Nelson, Kirstie Bellman, Christopher Landauer (Vision)</em></li>
+            <li>Intelligent Value-Co-Creation for Cross-Domain and Cross-Perspective Data Fusion in Socio-Technical Systems: Challenges and Future Research Avenues - <em>Sarah Oeste-Reiss, Sven Tomforde (Vision)</em></li>
+            <li>The Underpinnings for Cooperation: Going from Integrated to Cooperating - <em>Kirstie Bellman, Ada Diaconescu, David King, Christopher Landauer, Phyllis Nelson (Vision)</em></li>
           </ul>
         </td>
       </tr>
